<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preferences"
	android:key="preferences">
	<PreferenceCategory android:title="@string/scan_category">
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="show_crop_handle"
			android:title="@string/show_crop_handle"
			android:summary="@string/show_crop_handle_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="zoom_by_swiping"
			android:title="@string/zoom_by_swiping"
			android:summary="@string/zoom_by_swiping_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="auto_rotate"
			android:title="@string/auto_rotate"
			android:summary="@string/auto_rotate_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="try_harder"
			android:title="@string/try_harder"
			android:summary="@string/try_harder_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="vibrate"
			android:title="@string/vibrate"
			android:summary="@string/vibrate_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="use_history"
			android:title="@string/use_history"
			android:summary="@string/use_history_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="ignore_consecutive_duplicates"
			android:title="@string/ignore_consecutive_duplicates"
			android:summary="@string/ignore_consecutive_duplicates_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="copy_immediately"
			android:title="@string/copy_immediately"
			android:summary="@string/copy_immediately_summary"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/send_category">
		<de.markusfisch.android.binaryeye.preference.UrlPreference
			android:key="send_scan_url"
			android:title="@string/send_scan_url"/>
		<ListPreference
			android:key="send_scan_type"
			android:title="@string/send_scan_type"
			android:entries="@array/send_type_names"
			android:entryValues="@array/send_type_values"
			android:defaultValue="0"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/content_category">
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="open_immediately"
			android:title="@string/open_immediately"
			android:summary="@string/open_immediately_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="show_meta_data"
			android:title="@string/show_meta_data"
			android:summary="@string/show_meta_data_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="show_hex_dump"
			android:title="@string/show_hex_dump"
			android:summary="@string/show_hex_dump_summary"/>
		<android.support.v7.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="close_automatically"
			android:title="@string/close_automatically"
			android:summary="@string/close_automatically_summary"/>
		<de.markusfisch.android.binaryeye.preference.UrlPreference
			android:key="open_with_url"
			android:title="@string/open_with_url"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/locale_category">
		<ListPreference
			android:key="custom_locale"
			android:title="@string/custom_locale"
			android:entries="@array/locale_names"
			android:entryValues="@array/locale_values"
			android:defaultValue="0"/>
	</PreferenceCategory>
</PreferenceScreen>
