<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:material="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/remove"
		android:title="@string/remove_scan"
		android:icon="@drawable/ic_action_remove"
		android:visible="false"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/copy_password"
		android:title="@string/copy_password"
		android:icon="@drawable/ic_action_copy_password"
		android:visible="false"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/copy_to_clipboard"
		android:title="@string/copy_to_clipboard"
		android:icon="@drawable/ic_action_copy"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/share"
		android:title="@string/share"
		android:icon="@drawable/ic_action_share"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/share_file"
		android:title="@string/share_file"
		android:icon="@drawable/ic_action_share"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/create"
		android:title="@string/compose_barcode"
		android:icon="@drawable/ic_action_create"
		material:showAsAction="ifRoom"/>
</menu>
