<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:material="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/history"
		android:title="@string/history"
		android:icon="@drawable/ic_action_history"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/create"
		android:title="@string/compose_barcode"
		android:icon="@drawable/ic_action_create"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/switch_camera"
		android:title="@string/switch_camera"
		android:icon="@drawable/ic_action_switch_camera"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/preferences"
		android:title="@string/preferences"
		android:icon="@drawable/ic_action_preferences"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/info"
		android:title="@string/info"
		android:icon="@drawable/ic_action_info"
		material:showAsAction="ifRoom"/>
</menu>
