<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/automated_action_regex"/>
		<EditText
			android:id="@+id/regex"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/automated_action_regex_hint"
			android:inputType="text"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="12dp"
			android:text="@string/automated_action_type"/>
		<RadioGroup
			android:id="@+id/action_type"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<RadioButton
				android:id="@+id/action_type_intent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/automated_action_type_intent"/>
			<RadioButton
				android:id="@+id/action_type_custom_intent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/automated_action_type_custom_intent"/>
		</RadioGroup>
		<LinearLayout
			android:id="@+id/url_section"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:text="@string/automated_action_url_template"/>
			<EditText
				android:id="@+id/url_template"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/automated_action_url_hint"
				android:inputType="textUri"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/intent_section"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="gone">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:text="@string/automated_action_intent_uri_template"/>
			<EditText
				android:id="@+id/intent_uri_template"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/automated_action_intent_uri_hint"
				android:inputType="textUri"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
