<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:material="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/add_to_history"
		android:title="@string/add_to_history"
		android:icon="@drawable/ic_action_history_add"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/copy_to_clipboard"
		android:title="@string/copy_to_clipboard"
		android:icon="@drawable/ic_action_copy"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/export_to_file"
		android:title="@string/export_to_file"
		android:icon="@drawable/ic_action_save"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/brighten_screen"
		android:title="@string/brighten_screen"
		android:icon="@drawable/ic_action_bright"
		android:checkable="true"
		material:showAsAction="ifRoom"/>
</menu>
