<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:material="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/search"
		android:icon="@drawable/ic_action_search"
		android:title="@string/search_scan"
		material:actionViewClass="android.support.v7.widget.SearchView"
		material:showAsAction="collapseActionView|always"/>
	<item
		android:id="@+id/export_history"
		android:icon="@drawable/ic_action_export"
		android:title="@string/export_to_file"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/share_as_file"
		android:icon="@drawable/ic_action_share"
		android:title="@string/share_file"
		material:showAsAction="ifRoom"/>
	<item
		android:id="@+id/clear"
		android:icon="@drawable/ic_action_remove"
		android:title="@string/clear_history"
		material:showAsAction="ifRoom"/>
</menu>
