<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<de.markusfisch.android.binaryeye.widget.ConfinedScrollView
		android:id="@+id/scroll_view"
		android:clipToPadding="false"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/content"/>
			<EditText
				tools:targetApi="o"
				android:id="@+id/content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start|top"
				android:typeface="monospace"
				android:imeOptions="flagNoExtractUi"
				android:inputType="textMultiLine"
				android:hint="@string/input_content_here"
				android:importantForAutofill="no"/>
			<CheckBox
				android:id="@+id/unescape"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/unescape"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/format"/>
			<Spinner
				style="@style/Spinner"
				android:id="@+id/format"
				android:layout_marginBottom="16dp"/>
			<TextView
				android:id="@+id/error_correction_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/error_correction_level"/>
			<Spinner
				style="@style/Spinner"
				android:id="@+id/error_correction_level"
				android:layout_marginBottom="16dp"/>
			<TextView
				android:id="@+id/colors_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/colors"/>
			<Spinner
				style="@style/Spinner"
				android:id="@+id/colors"
				android:layout_marginBottom="16dp"
				android:entries="@array/colors"/>
			<android.support.v7.widget.SwitchCompat
				android:visibility="gone"
				android:id="@+id/add_quiet_zone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/add_quiet_zone"/>
		</LinearLayout>
	</de.markusfisch.android.binaryeye.widget.ConfinedScrollView>
	<android.support.design.widget.CoordinatorLayout
		android:id="@+id/inset_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<android.support.design.widget.FloatingActionButton
			style="@style/FAB"
			android:id="@+id/encode"
			android:contentDescription="@string/encode"
			android:src="@drawable/ic_action_next"/>
	</android.support.design.widget.CoordinatorLayout>
</FrameLayout>
