<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">
	<de.markusfisch.android.binaryeye.widget.ConfinedScrollView
		android:id="@+id/scroll_view"
		android:clipToPadding="false"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/content"/>
			<EditText
				tools:targetApi="o"
				android:id="@+id/content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="start|top"
				android:hint="@string/input_content_here"
				android:imeOptions="flagNoExtractUi"
				android:importantForAutofill="no"
				android:inputType="textMultiLine"
				android:typeface="monospace"/>
			<CheckBox
				android:id="@+id/unescape"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/unescape"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/format"/>
			<Spinner
				style="@style/Spinner"
				android:id="@+id/format"
				android:layout_marginBottom="8dp"/>
			<TextView
				style="@style/SecondaryText"
				android:id="@+id/format_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"/>
			<TextView
				android:id="@+id/error_correction_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/error_correction_level"/>
			<Spinner
				style="@style/Spinner"
				android:id="@+id/error_correction_level"
				android:layout_marginBottom="16dp"/>
			<TextView
				android:id="@+id/colors_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/colors"/>
			<Spinner
				style="@style/Spinner"
				android:id="@+id/colors"
				android:layout_marginBottom="16dp"
				android:entries="@array/colors"/>
			<androidx.appcompat.widget.SwitchCompat
				android:id="@+id/add_quiet_zone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/add_quiet_zone"/>
		</LinearLayout>
	</de.markusfisch.android.binaryeye.widget.ConfinedScrollView>
	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="@bool/fitsSystemWindows">
		<include layout="@layout/toolbar"/>
		<androidx.coordinatorlayout.widget.CoordinatorLayout
			android:id="@+id/inset_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<com.google.android.material.floatingactionbutton.FloatingActionButton
				style="@style/FAB"
				android:id="@+id/encode"
				android:contentDescription="@string/encode"
				android:src="@drawable/ic_action_next"/>
		</androidx.coordinatorlayout.widget.CoordinatorLayout>
	</androidx.coordinatorlayout.widget.CoordinatorLayout>
	<include layout="@layout/navbar"/>
</merge>
