<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/automated_action_regex"/>
		<EditText
			android:id="@+id/regex"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/ignore_code_regex_hint"
			android:inputType="text"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="12dp"
			android:text="@string/format"/>
		<Spinner
			android:id="@+id/format"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</ScrollView>
